--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 </div>
             </div>
             <h1>Les sports extrêmes</h1>
-            <p class="citationBlog">Pas question de trembler avant de s'élancer dans le vide<br>
-                depuis une plateforme de près de 30 mètres de haut<br>
+            <p class="citationBlog">Pas question de trembler avant de s'élancer dans le vide
+                depuis une plateforme de près de 30 mètres de haut
                  avec pour simple accroche un élastique, ou d'avoir le vertige lorsqu'on est funambule.
             </p>
             <div><a href="#">acceder au blog</a></div>
@@ -61,13 +61,13 @@
         <div><a href="#">J'en profite</a></div>
     </div>
     <div class="club">
-        <div></div>
-        <p>
+        <div class="techLogo"></div>
+        <p class="citationClub">
             Sur terre, dans les airs ou sur l'eau,<br>
             les sports extrêmes ont toujours ébahis les plus réfrénés et tentés les plus braves.
         </p>
         <div>
-            <div>
+            <div class="article A1">
                 <p>Becoming a member provides you with the best opportunity to 
                     secure tickets to watch our team in action, so don't miss out on 
                     this opportunity. Every game this season has sold out on the first 
@@ -77,7 +77,7 @@
                 </p>
                 <div><a href="#">En savoir plus</a></div>
             </div>
-            <div>
+            <div class="article A2">
                 <p>Our Soccer Club anticipates a passionate atmosphere for 
                     tonight's game against Tottenham and we ask for the support to 
                     remain respectful. Fans attending are also advised to arrive early 
@@ -90,40 +90,40 @@
         </div>
     </div>
     <div class="avantage">
-        <div>
-            <div></div>
+        <div class="avantageBox">
+            <div class="av1"></div>
             <p>
                 Livraison offerte<br>
                 100% garantie
             </p>
-            <div><a href="#">En savoir plus.</a></div>
+            <div class="lien"><a href="#">En savoir plus.</a></div>
         </div>
-        <div>
-            <div></div>
+        <div class="avantageBox">
+            <div class="av2"></div>
             <p>
                 Satisfaction<br>
                 100% Garantie
             </p>
-            <div><a href="#">En savoir plus.</a></div>
+            <div class="lien"><a href="#">En savoir plus.</a></div>
         </div>
-        <div>
-            <div></div>
+        <div class="avantageBox">
+            <div class="av3"></div>
             <p>
                 Délai de retour<br>
                 sous 14 jours
             </p>
-            <div><a href="#">En savoir plus.</a></div>
+            <div class="lien"><a href="#">En savoir plus.</a></div>
         </div>
     </div>
     <div class="successOfMonth">
         <h2>L'exploit du mois</h2>
-        <p>Il y a des performances qu'il ne faut pas rater, que l'on peut revoir des centaines de fois, réalisé en août <br>
+        <p class="citationSuccess">Il y a des performances qu'il ne faut pas rater, que l'on peut revoir des centaines de fois, réalisé en août 
             dernier dans un lieu splendide, l'énorme exploit que vous  allez voir ici, fait partie de ceux-là.
         </p>
         <div>
-            <p>Un casting de rêve pour votre plus grand plaisir, le <q> kid </q> 
-                (Pablo Signoret), le <q> bandit </q> (Rafael bridi) et le <q> pote 
-                    qui doit tout porter </q> (Guilherme Coury). <br><br>
+            <p>Un casting de rêve pour votre plus grand plaisir, le « kid » 
+                (Pablo Signoret), le « bandit » (Rafael bridi) et le « pote 
+                qui doit tout porter » (Guilherme Coury). <br><br>
                 Mais finalement quel est cet exploit, ce record, dont nous vous 
                 parlons depuis le début ? Traverser une slackline de 200 mètres, 
                 tendue au-dessus du vide, à 3000 mètres d'altitude. Autant dire 
@@ -131,28 +131,27 @@
                 ceux d'entre vous qui ont déjà eu le plaisir de voir cette vidéo.
             </p>
             <p>
-                <q>Cet endroit est unique, perdu dans les montagnes. L'aiguille 
+                « Cet endroit est unique, perdu dans les montagnes. L'aiguille 
                     Dibona n'est pas comme les autres sommets français: c'est très 
                     fin, très raide et c'est immense. Demandez à Pablo et Rafael et ils 
-                    vous diront une chose : d'y aller.
-                </q> ..... 
-                <q>
-                    Se rendre sur ce sommet était déjà une aventure en soi 
-                </q> ..... 
-                <q>
-                    cette fois, le fait de traverser la slackline n'était pas le plus compliqué : les gars 
-                    ont dû marcher pendant cinq jours pour atteindre le spopt, tout en portant 
-                    des sacs de 25 à 40 kilos.
-                </q> Pierre Chauffour, réalisateur.
+                    vous diront une chose : d'y aller. »
+                 ..... 
+                
+                    « Se rendre sur ce sommet était déjà une aventure en soi »
+                 ..... 
+                « cette fois, le fait de traverser la slackline n'était pas le plus compliqué : les gars 
+                    ont dû marcher pendant cinq jours pour atteindre le spot, tout en portant 
+                    des sacs de 25 à 40 kilos. »
+                Pierre Chauffour, réalisateur.
             </p>
         </div>
     </div>
     <div class="footer">
-        <div>
-            <div></div>
+        <div class="contact">
+            <div class="ultLogoFooter"></div>
             <p>ULtime - Sport Extreme <br>168 Blv Curie | Calais | FRANCE <br>
                 + 0800 559 6580 <br>
-                E-mail: <span>mail@ultime.com</span>
+                E-mail : <span>mail@ultime.com</span>
             </p>
         </div>
         <p>Copyright 2007 ® ULtime Extreme. All rights reserved.</p>
